# query-lens

./: .gitignore  README.md  pyproject.toml  今後修正すること.txt
backend/: config.py  main.py
backend/api/: db_connector.py  dependencies.py
backend/api/db/: connection.py  create_csv_tables.py  run_subqueries.py
backend/api/routers/: connection.py  determine_csv_file.py  get_csv_files.py  input.py  result.py  run_query.py
backend/api/schemas/: determine_csv_file.py  run_query.py
backend/api/services/: analyze.py  analyze_subquery.py  create_csv_tables.py  debug_sql_walk.py  query_validator.py  run_query_service.py
backend/api/services/analyze/: query_structure_analyzer.py
backend/api/services/analyze_subquery/: analyze_join.py  analyze_subquery.py  join_preview_builder.py  query_structure_analyzer.py  sort_subquery.py  subquery_builder.py  subquery_depth_analyzer.py  subquery_range_finder.py  subquery_runner.py  subquery_table_extractor.py
backend/api/validators/: csv_file_name_validator.py  query_validator.py
csv_files/: test1.csv  test2.csv  test3.csv  てｓｔ copy.csv
docs/: README.md  requirement.md  今後修正すること.txt
docs/要件/: 業務フロー.md  機能要件.md  非機能要件.md
docs/設計/: 画面遷移図.md
docs/設計/ワイヤーフレーム/: メイン画面.html  接続画面.html
frontend/: eslint.config.js  package-lock.json  package.json
frontend/css/: base.css  index.css  input.css  result.css
frontend/html/: input.html  result.html
frontend/js/: utility.js
frontend/js/api/: DetermineCsv.js  RunQuery.js
frontend/js/display/: DisplayLines.js  DisplayQuery.js  DisplayQueryResult.js  DisplayTables.js  DrawArrows.js
frontend/js/pages/: Result.js
frontend/js/pages/input/: Analysis.js  CsvDialog.js
templates/: index.html
templates/static/: ConfirmCsvFile.js  DisplayQueryResult.js  DisplayTables.js  MainPage.js  RunQuery.js  confirm_csv_file.js  db_setting.js  display_query_result.js  display_sql_result.js  display_tables.js  main_page.js  run_query.js
templates/views/: db_setting.html
tmp/: Untitled  login.html  main.html  sample_query copy.sql  sample_query.sql  てｓｔ.csv
