[project]
name = "querylens"
version = "0.1.0"
description = ""
authors = [
    {name = "ryuseim1115",email = "ryusei.maebuchi@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "sqlglot (>=30.2.0,<31.0.0)",
    "duckdb (>=1.5.2,<2.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = ["ruff>=0.9.0"]

[tool.ruff]
line-length = 88
exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
